Get rid of most warnings. The warning that remains, complaining about the bootclasspath not being set together with -source, could only get fixed by putting the java 1.8 rt.jar library on the bootclasspath which is way too involved.